ISPN-14784 Use java.security.manager=allow to run SecurityManager tests on JDK 21